refactor Skill with Record trait

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,7 +22,7 @@
                 <h1 class="ui center aligned header">Skills Tracker</h1>
                 <div class="field">
                     <label>Skill Name</label>
-                    <input type="text" id="name" class="small">
+                    <input type="checkbox" id="name" class="small">
                 </div>
                 <button class="ui primary submit button" type="submit" style="margin-top: 10px">Submit</button>
             </form>
